[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/menues/end_game_menu.gd" type="Script" id=1]
[ext_resource path="res://assets/BlueButton.png" type="Texture" id=2]
[ext_resource path="res://assets/GreenButton.png" type="Texture" id=3]
[ext_resource path="res://assets/RedButton.png" type="Texture" id=5]
[ext_resource path="res://assets/fonts/Kenney Bold.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://assets/startbild_game_rules.PNG" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
size = 23
font_data = ExtResource( 6 )

[node name="EndGameMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DisplayScore" type="VBoxContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer2" type="MarginContainer" parent="DisplayScore"]
margin_right = 1024.0
margin_bottom = 140.0
rect_min_size = Vector2( 0, 140 )
size_flags_horizontal = 3

[node name="Label2" type="Label" parent="DisplayScore"]
margin_top = 144.0
margin_right = 1024.0
margin_bottom = 179.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Your Score"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="Label" parent="DisplayScore"]
margin_top = 183.0
margin_right = 1024.0
margin_bottom = 218.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "o"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="DisplayScore"]
margin_top = 222.0
margin_right = 1024.0
margin_bottom = 242.0
rect_min_size = Vector2( 0, 20 )
size_flags_horizontal = 3

[node name="Control3" type="Control" parent="DisplayScore"]
margin_top = 246.0
margin_right = 1024.0
margin_bottom = 306.0
rect_min_size = Vector2( 0, 60 )
size_flags_horizontal = 3

[node name="AddScore" type="TextureButton" parent="DisplayScore/Control3"]
anchor_right = 1.0
anchor_bottom = 1.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 3 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="DisplayScore/Control3/AddScore"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -145.0
margin_top = -30.0
margin_right = 144.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Add score"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="DisplayScore"]
margin_top = 310.0
margin_right = 1024.0
margin_bottom = 370.0
rect_min_size = Vector2( 0, 60 )
size_flags_horizontal = 3

[node name="Restart" type="TextureButton" parent="DisplayScore/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 3 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="DisplayScore/Control/Restart"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -145.0
margin_top = -30.0
margin_right = 144.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Restart"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control2" type="Control" parent="DisplayScore"]
margin_top = 374.0
margin_right = 1024.0
margin_bottom = 434.0
rect_min_size = Vector2( 0, 60 )
size_flags_horizontal = 3

[node name="RestartVR" type="TextureButton" parent="DisplayScore/Control2"]
anchor_right = 1.0
anchor_bottom = 1.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 3 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="DisplayScore/Control2/RestartVR"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -145.0
margin_top = -30.0
margin_right = 144.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Restart VR"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer3" type="MarginContainer" parent="DisplayScore"]
margin_top = 438.0
margin_right = 1024.0
margin_bottom = 517.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer4" type="MarginContainer" parent="DisplayScore"]
margin_top = 521.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="AddScore" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer2" type="MarginContainer" parent="AddScore"]
margin_right = 1024.0
margin_bottom = 140.0
rect_min_size = Vector2( 0, 140 )
size_flags_horizontal = 3

[node name="Label2" type="Label" parent="AddScore"]
margin_top = 144.0
margin_right = 1024.0
margin_bottom = 179.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Your Score"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="Label" parent="AddScore"]
margin_top = 183.0
margin_right = 1024.0
margin_bottom = 218.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "o"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="AddScore"]
margin_top = 222.0
margin_right = 1024.0
margin_bottom = 257.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Your Name"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameInput" type="LineEdit" parent="AddScore"]
margin_top = 261.0
margin_right = 1024.0
margin_bottom = 306.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1

[node name="MarginContainer" type="MarginContainer" parent="AddScore"]
margin_top = 310.0
margin_right = 1024.0
margin_bottom = 330.0
rect_min_size = Vector2( 0, 20 )
size_flags_horizontal = 3

[node name="Control3" type="Control" parent="AddScore"]
margin_top = 334.0
margin_right = 1024.0
margin_bottom = 394.0
rect_min_size = Vector2( 0, 60 )
size_flags_horizontal = 3

[node name="SaveScore" type="TextureButton" parent="AddScore/Control3"]
anchor_right = 1.0
anchor_bottom = 1.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 3 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="AddScore/Control3/SaveScore"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -145.0
margin_top = -30.0
margin_right = 144.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Save score"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer3" type="MarginContainer" parent="AddScore"]
margin_top = 398.0
margin_right = 1024.0
margin_bottom = 497.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer4" type="MarginContainer" parent="AddScore"]
margin_top = 501.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="pressed" from="DisplayScore/Control3/AddScore" to="." method="_on_AddScore_pressed"]
[connection signal="pressed" from="DisplayScore/Control/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="DisplayScore/Control2/RestartVR" to="." method="_on_RestartVR_pressed"]
